--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kishee | THE ULTIMATE RESTAURANT</title>
     <link rel="shortcut icon" href="img/k.jpg" type="image/x-icon">
     <link rel="stylesheet" href="websitecss.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
         <a href="#">
@@ -31,7 +35,7 @@
                 <p>
                     Try out the new experience of food.
                 </p>
-                <button class="btn btn-download">Download</button>
+                <button class="btn btn-download" id="bdown">Download</button>
             </div>
         </section>
 
@@ -45,52 +49,74 @@
                     <div class="features-card">
                         <i class="fa-solid fa-champagne-glasses"></i>
                         <h6>Dine In</h6>
-                        <p>Indulge in the ultimate dining experience with our impeccable dine-in facilities. 
-                            Our restaurant offers a seamless blend of comfort and sophistication, providing guests with a welcoming ambiance that sets the stage for an unforgettable meal.
-                             From intimate tables for two to spacious seating arrangements for larger groups, our dining area caters to various preferences, ensuring every guest finds the perfect spot to relish our culinary offerings. </p>
+                        <p>Indulge in the ultimate dining experience with our impeccable dine-in facilities.
+                            Our restaurant offers a seamless blend of comfort and sophistication, providing guests with
+                            a welcoming ambiance that sets the stage for an unforgettable meal.
+                            From intimate tables for two to spacious seating arrangements for larger groups, our dining
+                            area caters to various preferences, ensuring every guest finds the perfect spot to relish
+                            our culinary offerings. </p>
                     </div>
                     <div class="features-card">
                         <i class="fa-solid fa-bag-shopping"></i>
                         <h6>Take away</h6>
-                        <p>Experience the same exquisite flavors and culinary excellence of our restaurant from the comfort of your own home with our seamless take-away service. Our commitment to exceptional taste and quality extends
-                             beyond our doors, ensuring that every dish prepared for take-away retains its freshness and artful presentation.</p>
+                        <p>Experience the same exquisite flavors and culinary excellence of our restaurant from the
+                            comfort of your own home with our seamless take-away service. Our commitment to exceptional
+                            taste and quality extends
+                            beyond our doors, ensuring that every dish prepared for take-away retains its freshness and
+                            artful presentation.</p>
                     </div>
                     <div class="features-card">
                         <i class="fa-solid fa-truck-fast"></i>
                         <h6>Home delivery</h6>
-                        <p>Experience the convenience of our restaurant's exquisite offerings delivered straight to your doorstep with our efficient home delivery service. Whether you're craving your favorite dish or exploring new
-                             culinary adventures, our menu selection is crafted to tantalize your taste buds, available for delivery to your home or office. </p>
+                        <p>Experience the convenience of our restaurant's exquisite offerings delivered straight to your
+                            doorstep with our efficient home delivery service. Whether you're craving your favorite dish
+                            or exploring new
+                            culinary adventures, our menu selection is crafted to tantalize your taste buds, available
+                            for delivery to your home or office. </p>
                     </div>
                 </div>
-            </div>    
+            </div>
         </section>
 
         <section id="information-one">
             <div class="information-one center">
-                <div class="flex-container">    
+                <div class="flex-container">
                     <img class="grid-item-one" src="img/hotelint.jpg" alt="hotel">
                     <div class="grid-item-two">
                         <h3>Taste the Best of your Life</h3>
-                        <li><i class="fa-solid fa-circle-check"></i>Step into the inviting embrace of our restaurant, where every detail 
-                            is meticulously crafted to offer an unforgettable dining experience. The ambiance resonates with warmth and sophistication, weaving together modern elegance with a touch of rustic charm.</li>
-                        <li><i class="fa-solid fa-circle-check"></i> Soft, ambient lighting casts a gentle glow across the intimate space, creating an atmosphere that's perfect for both a romantic evening and a lively gathering of friends.</li>
-                        <li><i class="fa-solid fa-circle-check"></i> The tastefully curated decor, adorned with tasteful artwork and accents, complements the cozy setting, setting the stage for an extraordinary culinary journey.</li>
-                        <button class="btn btn-subscribe">Subscribe</button>
+                        <li><i class="fa-solid fa-circle-check"></i>Step into the inviting embrace of our restaurant,
+                            where every detail
+                            is meticulously crafted to offer an unforgettable dining experience. The ambiance resonates
+                            with warmth and sophistication, weaving together modern elegance with a touch of rustic
+                            charm.</li>
+                        <li><i class="fa-solid fa-circle-check"></i> Soft, ambient lighting casts a gentle glow across
+                            the intimate space, creating an atmosphere that's perfect for both a romantic evening and a
+                            lively gathering of friends.</li>
+                        <li><i class="fa-solid fa-circle-check"></i> The tastefully curated decor, adorned with tasteful
+                            artwork and accents, complements the cozy setting, setting the stage for an extraordinary
+                            culinary journey.</li>
+                        <button class="btn btn-subscribe sub">Subscribe</button>
                     </div>
                 </div>
             </div>
         </section>
         <section id="information-two">
             <div class="information-two center">
-                
+
                 <div class="grid-item-one">
                     <h3>Taste the Best of your Life</h3>
-                    <li><i class="fa-solid fa-circle-check"></i>Beyond the captivating ambiance lies a culinary haven where flavors reign supreme. 
-                        Our menu is a celebration of gastronomic delight, carefully curated to tantalize your taste buds with a symphony of exquisite flavors and textures.</li>
-                    <li><i class="fa-solid fa-circle-check"></i>Each dish is a masterpiece, crafted by skilled chefs using the freshest, locally
-                         sourced ingredients. From the first bite to the last, savor the harmony of diverse tastes meticulously balanced to perfection. </li>
-                    <li><i class="fa-solid fa-circle-check"></i>Whether indulging in signature dishes or exploring innovative culinary creations, 
-                        every plate promises an explosion of taste that lingers, leaving an indelible impression of unparalleled dining satisfaction.</li>
+                    <li><i class="fa-solid fa-circle-check"></i>Beyond the captivating ambiance lies a culinary haven
+                        where flavors reign supreme.
+                        Our menu is a celebration of gastronomic delight, carefully curated to tantalize your taste buds
+                        with a symphony of exquisite flavors and textures.</li>
+                    <li><i class="fa-solid fa-circle-check"></i>Each dish is a masterpiece, crafted by skilled chefs
+                        using the freshest, locally
+                        sourced ingredients. From the first bite to the last, savor the harmony of diverse tastes
+                        meticulously balanced to perfection. </li>
+                    <li><i class="fa-solid fa-circle-check"></i>Whether indulging in signature dishes or exploring
+                        innovative culinary creations,
+                        every plate promises an explosion of taste that lingers, leaving an indelible impression of
+                        unparalleled dining satisfaction.</li>
                     <button class="btn btn-order">Order</button>
                 </div>
                 <img class="grid-item-two" src="img/biryani.jpg" alt="hotel">
@@ -115,8 +141,8 @@
                                 <p class="card-description">"Success isn't for weak Hearted,Kishore"</p>
                                 <div class="social-icons">
                                     <i class="fa-brands fa-facebook"></i>
-                                    <i class="fa-brands fa-instagram"></i>
-                                    <i class="fa-brands fa-x-twitter"></i> 
+                                    <i class="fa-brands fa-instagram kishorei" ></i>
+                                    <i class="fa-brands fa-x-twitter"></i>
                                 </div>
                             </div>
                         </div>
@@ -135,8 +161,8 @@
                                 <p class="card-description">"Success isn't for weak Hearted,Yash"</p>
                                 <div class="social-icons">
                                     <i class="fa-brands fa-facebook"></i>
-                                    <i class="fa-brands fa-instagram"></i>
-                                    <i class="fa-brands fa-x-twitter"></i> 
+                                    <i class="fa-brands fa-instagram yashi"></i>
+                                    <i class="fa-brands fa-x-twitter"></i>
                                 </div>
                             </div>
                         </div>
@@ -155,17 +181,17 @@
                                 <p class="card-description">"Success isn't for weak Hearted,Dhoni"</p>
                                 <div class="social-icons">
                                     <i class="fa-brands fa-facebook"></i>
-                                    <i class="fa-brands fa-instagram"></i>
-                                    <i class="fa-brands fa-x-twitter"></i> 
+                                    <i class="fa-brands fa-instagram dhonii"></i>
+                                    <i class="fa-brands fa-x-twitter"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="card">
                         <div class="upper-section">
                             <div class="image-container">
-                                <img class="avatar"src="img/worker3.jfif" alt="Developer">
+                                <img class="avatar" src="img/worker3.jfif" alt="Developer">
                             </div>
                         </div>
                         <div class="lower-section">
@@ -176,8 +202,8 @@
                                 <p class="card-description">"Success isn't for weak Hearted,Virat"</p>
                                 <div class="social-icons">
                                     <i class="fa-brands fa-facebook"></i>
-                                    <i class="fa-brands fa-instagram"></i>
-                                    <i class="fa-brands fa-x-twitter"></i> 
+                                    <i class="fa-brands fa-instagram virati" ></i>
+                                    <i class="fa-brands fa-x-twitter"></i>
                                 </div>
                             </div>
                         </div>
@@ -212,6 +238,8 @@
                 </form>
             </div>
         </section>
+        <script src="script.js"></script>
+
     </main>
     <footer>
         <div class="center">
@@ -219,4 +247,5 @@
         </div>
     </footer>
 </body>
+
 </html>
